fixed item create meta settings label spacing

--- a/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
+++ b/src/apps/content-editor/src/app/views/ItemCreate/ItemCreate.less
@@ -29,6 +29,14 @@
 }
 
 .Meta {
+  h2 {
+    padding-bottom: 8px;
+  }
+  article {
+    label {
+      margin-bottom: 8px;
+    }
+  }
   .Divider {
     border-bottom-color: @zesty-field-blue;
     margin: 32px 0 16px;
